# hornero

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  environment.yml  pyproject.toml  setup.cfg
hornero/: __init__.py  cli.py  main.py  managers.py  utils.py  yml_parser.py
hornero/test/: test_utils.py
hornero/test/data/: sample_packages.yml
