[metadata]
name = hornero
fullname = Hornero
description = "A package selector for building your confy nest"
author = "Santiago Soler"
author_email = santiago.r.soler@gmail.com
license = MIT
license_file = LICENSE.txt
platform = any
keywords = linux, package manager, installation
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
url = https://www.santisoler.com/hornero
project_urls =
    Documentation = https://www.santisoler.com/hornero
    Release Notes = https://github.com/santisoler/hornero/releases
    Bug Tracker = https://github.com/santisoler/hornero/issues
    Source Code = https://github.com/santisoler/hornero

[options]
zip_safe = True
packages = find:
python_requires = >=3.6
install_requires =
    click
    distro
    pythondialog
    pyyaml
    rich
setup_requires = setuptools_scm
include_package_data = True

[options.entry_points]
console_scripts =
    hornero = hornero.cli:cli
